--- a/8.Bolum_4.ipynb
+++ b/8.Bolum_4.ipynb
@@ -708,7 +708,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# SVM algorithm classified better than Random Forest algorithm(I tried in the previous assignment)."
+    "# SVM algorithm classified better than Random Forest algorithm(I have tried in the previous assignment)."
    ]
   }
  ],
