Support Vector Machine

--- a/8.Bolum_4.ipynb
+++ b/8.Bolum_4.ipynb
@@ -627,10 +627,11 @@
    "outputs": [],
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split",
     "#Instantiate the scaler\n",
     "scaler=StandardScaler()\n",
     "Xsc=scaler.fit_transform(X)\n",
-    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.20, random_state=40,stratify = y)"
+    "X_train,X_test,y_train,y_test=train_test_split(Xsc,y,test_size=0.20, random_state=40,stratify = y)"
    ]
   },
   {
